--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.7"
+    "@tailwindcss/forms": "^0.5.7",
+    "datatables.net-dt": "^2.0.8"
   }
 }
