--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-venv/
-node_modules
-node_modules1
-src/apphome/settings.py
-src/venv
-.DS_Store
-remote.ipynb
-src/storage/__pycache__/
-src/storage/migrations/
-src/apphome/__pycache__
+/venv
+/node_modules
+/node_modules1
+/src/apphome/settings.py
+
+/.DS_Store
+/remote.ipynb
+/src/storage/__pycache__/
+/src/storage/migrations/
+/src/apphome/__pycache__
